--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
   <!-- Musiqa elementi -->
   <audio id="weddingMusic" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+    <source src="./taklifnoma.mp3" type="audio/mp3">
     Sizning brauzeringiz audio elementni qo'llab-quvvatlamaydi.
   </audio>
 
@@ -523,4 +523,5 @@
   </script>
 </body>
 </html>
+
 
