--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <div class="details">
         <div class="date-time">📅 5-dekabr 2025-yil | 🕗 Soat 07:00</div>
         <div class="location">
-          <span class="location-icon">📍</span> Eski shoyxo'ja qishlog'i,Bibirobiya to'yxonasi
+          <span class="location-icon">📍</span> Bibirobiya to'yxonasi
         </div>
       </div>
       
@@ -523,6 +523,7 @@
   </script>
 </body>
 </html>
+
 
 
 
